# toria

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  generators.cxx  impl.cxx  main.cxx  md5.cxx  sha1.cxx  std.cxx  toria.cxx  uuid.cxx  vcpkg-configuration.json  vcpkg.json  windows.cxx
src/crypto/: common.cppm  crypto.cppm  hash.cppm  md5.cppm  sha1.cppm  std.cppm
src/memory/: windows.cpp
src/semver/: identifier.cppm  impl.cppm  parse.cppm  parse_error.cppm  range.cppm  semver.cppm  std.cppm
src/system/: process.cppm  std.cppm  system.cppm  system_info.cppm  thread.cppm  windows.cpp
src/util/: basic_fixed_string.cppm  byte_utils.cppm  instance_of.cppm  std.cppm  string_utils.cppm  tracing_exception.cppm  util.cppm  windows.cpp
src/uuid/: generators.cppm  impl.cppm  std.cppm  uuid.cppm
src/uuid/crypto/: md5.cppm  sha1.cppm
std/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  main.cxx
